--- a/153b.html
+++ b/153b.html
@@ -117,9 +117,8 @@
                                     <p class="text-xs text-blue-500 uppercase font-bold tracking-wider mb-2">Answer</p>
                                     <p id="flashcard-answer" class="text-lg sm:text-2xl md:text-3xl font-black text-blue-700 dark:text-blue-200"></p>
                                 </div>
-                                <div id="flashcard-image-panel" class="rounded-2xl bg-slate-50/70 dark:bg-slate-800/40 border border-slate-200 dark:border-slate-700 p-3 sm:p-4 flex flex-col flex-1 min-h-[200px] sm:min-h-[240px] overflow-auto no-scrollbar">
-                                    <p class="text-xs text-slate-500 uppercase font-bold tracking-wider">Images</p>
-                                    <div id="flashcard-images" class="mt-3 grid gap-3"></div>
+                                <div id="flashcard-image-panel" class="rounded-2xl flex flex-col flex-1 min-h-[200px] sm:min-h-[240px] overflow-auto no-scrollbar">
+                                    <div id="flashcard-images" class="grid gap-3 w-full h-full"></div>
                                 </div>
                             </div>
                             <div class="flex-1 flex flex-col justify-center gap-3 sm:gap-4 w-full sm:min-w-[230px]">
@@ -511,13 +510,12 @@
             }
             panel.classList.remove('hidden');
             grid.className = images.length > 1
-                ? 'mt-3 grid grid-cols-1 sm:grid-cols-2 gap-3 flex-1 auto-rows-fr'
-                : 'mt-3 grid grid-cols-1 gap-3 flex-1 auto-rows-fr';
-            grid.style.gridAutoRows = 'minmax(0, 1fr)';
-            grid.style.height = '100%';
+                ? 'grid grid-cols-1 sm:grid-cols-2 gap-3 w-full h-full'
+                : 'grid grid-cols-1 gap-3 w-full h-full';
+            
             images.forEach((src, idx) => {
                 const wrapper = document.createElement('div');
-                wrapper.className = 'rounded-xl border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-900 p-3 flex items-center justify-center h-full min-h-[220px]';
+                wrapper.className = 'flex items-center justify-center w-full h-full min-h-[220px] sm:min-h-[280px]';
                 const img = document.createElement('img');
                 img.src = src;
                 img.alt = `${altBase} image ${idx + 1}`;
