--- a/153b.html
+++ b/153b.html
@@ -110,15 +110,15 @@
                         <div id="flashcard-question" class="text-2xl sm:text-3xl md:text-5xl font-black text-slate-800 dark:text-white text-center tracking-tight leading-tight max-w-full sm:max-w-4xl"></div>
                         <p class="mt-10 sm:mt-12 text-slate-400 text-sm sm:text-base md:text-lg font-medium uppercase tracking-[0.3em] animate-pulse">Click to reveal</p>
                     </div>
-                    <div id="flashcard-back" class="absolute inset-0 backface-hidden bg-white dark:bg-slate-900 rounded-3xl border-2 border-blue-500 dark:border-blue-500 shadow-2xl flex p-5 sm:p-6 md:p-8 rotate-y-180 overflow-hidden">
+                    <div id="flashcard-back" class="absolute inset-0 backface-hidden bg-white dark:bg-slate-900 rounded-3xl border-2 border-blue-500 dark:border-blue-500 shadow-2xl flex p-5 sm:p-6 md:p-8 rotate-y-180 overflow-y-auto no-scrollbar">
                         <div class="w-full h-full flex flex-col md:flex-row gap-5 sm:gap-8 items-stretch">
                             <div class="flex-[3] flex flex-col gap-3 sm:gap-4">
                                 <div class="p-4 sm:p-6 rounded-2xl bg-blue-50/50 dark:bg-blue-900/20 border border-blue-100 dark:border-blue-800/50">
                                     <p class="text-xs text-blue-500 uppercase font-bold tracking-wider mb-2">Answer</p>
                                     <p id="flashcard-answer" class="text-lg sm:text-2xl md:text-3xl font-black text-blue-700 dark:text-blue-200"></p>
                                 </div>
-                                <div id="flashcard-image-panel" class="rounded-2xl flex flex-col flex-1 min-h-[200px] sm:min-h-[240px] overflow-auto no-scrollbar">
-                                    <div id="flashcard-images" class="grid gap-3 w-full h-full"></div>
+                                <div id="flashcard-image-panel" class="rounded-2xl flex flex-col flex-1 min-h-[200px] sm:min-h-[240px]">
+                                    <div id="flashcard-images" class="grid gap-3 w-full"></div>
                                 </div>
                             </div>
                             <div class="flex-1 flex flex-col justify-center gap-3 sm:gap-4 w-full sm:min-w-[230px]">
@@ -510,17 +510,17 @@
             }
             panel.classList.remove('hidden');
             grid.className = images.length > 1
-                ? 'grid grid-cols-1 sm:grid-cols-2 gap-3 w-full h-full'
-                : 'grid grid-cols-1 gap-3 w-full h-full';
+                ? 'grid grid-cols-1 sm:grid-cols-2 gap-3 w-full'
+                : 'grid grid-cols-1 gap-3 w-full';
             
             images.forEach((src, idx) => {
                 const wrapper = document.createElement('div');
-                wrapper.className = 'flex items-center justify-center w-full h-full min-h-[220px] sm:min-h-[280px]';
+                wrapper.className = 'flex items-center justify-center w-full min-h-[200px] sm:min-h-[300px]';
                 const img = document.createElement('img');
                 img.src = src;
                 img.alt = `${altBase} image ${idx + 1}`;
                 img.loading = 'lazy';
-                img.className = 'max-h-full max-w-full object-contain';
+                img.className = 'w-full h-auto max-h-none object-contain rounded-xl';
                 wrapper.appendChild(img);
                 grid.appendChild(wrapper);
             });
