Add Chapter 1 flashcards page and isolated storage

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                 <div class="mt-2 flex flex-col gap-1">
                     <a href="cards.html" class="text-blue-600 dark:text-blue-400 hover:underline">amino acids</a>
                     <a href="153b.html" class="text-blue-600 dark:text-blue-400 hover:underline">153B</a>
+                    <a href="chapter1.html" class="text-blue-600 dark:text-blue-400 hover:underline">Chapter 1</a>
                 </div>
             </div>
             <!-- Section 4 -->
