--- a/index.html
+++ b/index.html
@@ -88,8 +88,13 @@
                 <h2 class="text-xl font-bold text-slate-900 dark:text-white mb-2">Biological and Biochemical Foundations of Living Systems</h2>
                 <div class="mt-2 flex flex-col gap-1">
                     <a href="cards.html" class="text-blue-600 dark:text-blue-400 hover:underline">amino acids</a>
-                    <a href="153b.html" class="text-blue-600 dark:text-blue-400 hover:underline">153B</a>
-                    <a href="chapter1.html" class="text-blue-600 dark:text-blue-400 hover:underline">Chapter 1</a>
+                    <div class="mt-2 pt-2 border-t border-slate-100 dark:border-slate-800">
+                        <p class="text-[10px] font-bold uppercase tracking-widest text-slate-400 mb-1">153B Course</p>
+                        <div class="flex flex-col gap-1 pl-2">
+                            <a href="153b.html" class="text-blue-600 dark:text-blue-400 hover:underline">Midterm 1</a>
+                            <a href="chapter1.html" class="text-blue-600 dark:text-blue-400 hover:underline">Chapter 1</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- Section 4 -->
