Consolidate 153B course into a single tabbed page with dynamic set loading

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                     <div class="mt-2 pt-2 border-t border-slate-100 dark:border-slate-800">
                         <p class="text-[10px] font-bold uppercase tracking-widest text-slate-400 mb-1">153B Course</p>
                         <div class="flex flex-col gap-1 pl-2">
-                            <a href="153b.html" class="text-blue-600 dark:text-blue-400 hover:underline">Midterm 1</a>
-                            <a href="chapter1.html" class="text-blue-600 dark:text-blue-400 hover:underline">Chapter 1</a>
+                            <a href="153b.html?set=midterm1" class="text-blue-600 dark:text-blue-400 hover:underline">Midterm 1</a>
+                            <a href="153b.html?set=chapter1" class="text-blue-600 dark:text-blue-400 hover:underline">Chapter 1</a>
                         </div>
                     </div>
                 </div>
