--- a/153b.html
+++ b/153b.html
@@ -39,7 +39,7 @@
                     </div>
                     
                     <div class="flex flex-wrap items-center justify-center sm:justify-end gap-3 sm:gap-6 w-full sm:w-auto">
-                        <nav class="flex flex-wrap justify-center sm:justify-start gap-3 sm:gap-8" aria-label="153B">
+                        <nav class="flex flex-wrap justify-center sm:justify-start gap-3 sm:gap-8" aria-label="Biochemistry">
                             <a href="index.html" class="nav-link py-2 sm:py-5 text-sm font-medium text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-200" title="Home">
                                 <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/></svg>
                             </a>
@@ -1251,7 +1251,7 @@
             const navTitle = document.getElementById('nav-title');
             const mainTitle = document.getElementById('main-title');
             
-            if (pageTitle) pageTitle.textContent = `${title} - Flashcards`;
+            if (pageTitle) pageTitle.textContent = `Biochemistry: ${title}`;
             if (navTitle) navTitle.textContent = title;
             if (mainTitle) mainTitle.textContent = title;
         }
