--- a/index.html
+++ b/index.html
@@ -88,21 +88,27 @@
                 <h2 class="text-xl font-bold text-slate-900 dark:text-white mb-2">Biological and Biochemical Foundations of Living Systems</h2>
                 <div class="mt-2 flex flex-col gap-1">
                     <a href="cards.html" class="text-blue-600 dark:text-blue-400 hover:underline">amino acids</a>
-                    <div class="mt-2 pt-2 border-t border-slate-100 dark:border-slate-800">
-                        <p class="text-[10px] font-bold uppercase tracking-widest text-slate-400 mb-1">153B Course</p>
-                        <div class="flex flex-col gap-1 pl-2">
-                            <a href="153b.html?set=midterm1" class="text-blue-600 dark:text-blue-400 hover:underline">Midterm 1</a>
-                            <a href="153b.html?set=chapter1" class="text-blue-600 dark:text-blue-400 hover:underline">Chapter 1</a>
-                        </div>
-                    </div>
                 </div>
             </div>
+
             <!-- Section 4 -->
             <div class="bg-white dark:bg-slate-900 rounded-2xl shadow-sm border border-slate-200 dark:border-slate-800 p-6 hover:shadow-md transition-shadow">
                 <div class="h-12 w-12 bg-orange-100 dark:bg-orange-900/30 rounded-xl flex items-center justify-center mb-4 text-orange-600 dark:text-orange-400">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>
                 </div>
                 <h2 class="text-xl font-bold text-slate-900 dark:text-white mb-2">Psychological, Social, and Biological Foundations of Behavior</h2>
+            </div>
+
+            <!-- Section 5 -->
+            <div class="bg-white dark:bg-slate-900 rounded-2xl shadow-sm border border-slate-200 dark:border-slate-800 p-6 hover:shadow-md transition-shadow border-blue-500/30">
+                <div class="h-12 w-12 bg-blue-50 dark:bg-blue-900/40 rounded-xl flex items-center justify-center mb-4 text-blue-600 dark:text-blue-400">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"/></svg>
+                </div>
+                <h2 class="text-xl font-bold text-slate-900 dark:text-white mb-2">153B BioBioChem</h2>
+                <div class="mt-2 flex flex-col gap-1">
+                    <a href="153b.html?set=midterm1" class="text-blue-600 dark:text-blue-400 hover:underline">Midterm 1</a>
+                    <a href="153b.html?set=chapter1" class="text-blue-600 dark:text-blue-400 hover:underline">Chapter 1</a>
+                </div>
             </div>
         </div>
     </main>
