Update course title to 'Biochemistry: DNA, RNA, and Protein Synthesis' and refine dashboard layout

--- a/153b.html
+++ b/153b.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>153B - BioBioChem Flashcards</title>
+    <title id="page-title">Biochemistry - Flashcards</title>
     <link rel="preconnect" href="https://api.github.com" crossorigin>
     <link rel="dns-prefetch" href="https://api.github.com">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -43,7 +43,7 @@
                             <a href="index.html" class="nav-link py-2 sm:py-5 text-sm font-medium text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-200" title="Home">
                                 <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/></svg>
                             </a>
-                            <a href="153b.html" class="nav-link active py-2 sm:py-5 text-sm font-medium text-blue-600 border-b-2 border-blue-600">Flashcards</a>
+                            <a href="153b.html" id="nav-title" class="nav-link active py-2 sm:py-5 text-sm font-medium text-blue-600 border-b-2 border-blue-600">Flashcards</a>
                         </nav>
 
                         <button onclick="toggleDarkMode()" class="p-2 rounded-xl bg-slate-100 dark:bg-slate-800 text-slate-600 dark:text-slate-400 hover:bg-slate-200 dark:hover:bg-slate-700 transition-colors shrink-0" title="Toggle Dark/Light Mode">
@@ -79,7 +79,7 @@
             <div class="flex flex-col sm:flex-row sm:items-end sm:justify-between gap-4 mb-6">
                 <div class="flex-grow">
                     <p class="text-xs uppercase tracking-[0.35em] text-slate-400 font-semibold">BioBioChem</p>
-                    <h1 class="text-3xl sm:text-4xl font-black text-slate-900 dark:text-white">153B Midterm 1</h1>
+                    <h1 id="main-title" class="text-3xl sm:text-4xl font-black text-slate-900 dark:text-white">Biochemistry</h1>
                     <div class="mt-3 flex items-center gap-2 max-w-sm">
                         <div class="relative flex-grow group">
                             <input id="compact-save-code" type="text" placeholder="Paste code to load..." 
