--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="h-12 w-12 bg-blue-50 dark:bg-blue-900/40 rounded-xl flex items-center justify-center mb-4 text-blue-600 dark:text-blue-400">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"/></svg>
                 </div>
-                <h2 class="text-xl font-bold text-slate-900 dark:text-white mb-2">153B BioBioChem</h2>
+                <h2 class="text-xl font-bold text-slate-900 dark:text-white mb-2">Biochemistry: DNA, RNA, and Protein Synthesis</h2>
                 <div class="mt-2 flex flex-col gap-1">
                     <a href="153b.html?set=midterm1" class="text-blue-600 dark:text-blue-400 hover:underline">Midterm 1</a>
                     <a href="153b.html?set=chapter1" class="text-blue-600 dark:text-blue-400 hover:underline">Chapter 1</a>
