--- a/153b.html
+++ b/153b.html
@@ -74,6 +74,7 @@
             <div class="flex items-center gap-1 mb-6 border-b dark:border-slate-800">
                 <button id="tab-midterm1" class="set-tab px-4 py-2 text-sm font-bold border-b-2 transition-all" data-set="midterm1">Midterm 1</button>
                 <button id="tab-chapter1" class="set-tab px-4 py-2 text-sm font-bold border-b-2 transition-all" data-set="chapter1">Chapter 1</button>
+                <button id="tab-molecules" class="set-tab px-4 py-2 text-sm font-bold border-b-2 transition-all" data-set="molecules">Molecules</button>
             </div>
 
             <div class="flex flex-col sm:flex-row sm:items-end sm:justify-between gap-4 mb-6">
@@ -1291,7 +1292,7 @@
             // Check URL for set parameter
             const params = new URLSearchParams(window.location.search);
             const setParam = params.get('set');
-            if (setParam && (setParam === 'midterm1' || setParam === 'chapter1')) {
+            if (setParam && (setParam === 'midterm1' || setParam === 'chapter1' || setParam === 'molecules')) {
                 currentSet = setParam;
             }
 
@@ -1305,7 +1306,10 @@
             });
 
             let rawDeck = [];
-            let title = currentSet === 'midterm1' ? "153B Midterm 1" : "Chapter 1";
+            let title = "Molecules";
+            if (currentSet === 'midterm1') title = "153B Midterm 1";
+            else if (currentSet === 'chapter1') title = "Chapter 1";
+
             try {
                 const response = await fetch(`json/${currentSet}.json`);
                 const data = await response.json();
