--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                 <div class="mt-2 flex flex-col gap-1">
                     <a href="153b.html?set=midterm1" class="text-blue-600 dark:text-blue-400 hover:underline">Midterm 1</a>
                     <a href="153b.html?set=chapter1" class="text-blue-600 dark:text-blue-400 hover:underline">Chapter 1</a>
+                    <a href="molecules.html?set=molecules" class="text-blue-600 dark:text-blue-400 hover:underline">Molecules</a>
                 </div>
             </div>
         </div>
